refactoring exception handler and add manual httpstatuscode